Attempt to fix too tall height of container.

--- a/pages/[subdomain].module.css
+++ b/pages/[subdomain].module.css
@@ -9,6 +9,7 @@
 .singleSiteContainer {
     margin: 50px auto 50px auto;
     width: 800px;
+    height: auto;
     background-color: lightblue;
     padding: 50px;
     border-radius: 10px;
